--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -80,6 +80,8 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         with:
           path: ./out
+      - name: Vercel Deploy Action
+        uses: ngduc/vercel-deploy-action@v19.0.12
 
   # Deployment job
   deploy:
