--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -40,3 +40,8 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
+      - name: Vercel Deploy Action
+        uses: ngduc/vercel-deploy-action@v19.0.12
+      - name: Vercel Deploy Action
+        uses: ngduc/vercel-deploy-action@v19.0.12
+
