--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -25,7 +25,7 @@ jobs:
   deploy:
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+      url: ${{http://super-duper-guide.vercel.app/}}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
