--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -25,7 +25,7 @@ jobs:
   deploy:
     environment:
       name: github-pages
-      url: ${{https://github.com/ah-ha-admin/super-duper-guide/deployments/activity_log?environment=github-pages}}
+      url: ${{https://github.com/ah-ha-admin/super-duper-guide}}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
